# Monitoring-DoA-Without-EEG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: create_train_test_df.ipynb  load_data.ipynb
scripts/dataset/: cleanup_bad_data.py  fetch_dwc_data.py  sample_data.py  single_surgery_per_file.py
scripts/training/: Xg_boost_regressor.py  bigpu.py  lstm_regressor.py  mlp_regressor.py
scripts/viz/: plot_bis_preds.py  plot_raw_smooth_signals.py  plot_xgboost_preds.py
src/doa_zero_eeg/: __init__.py
src/doa_zero_eeg/models/: extended_linear_reg.py  linear_reg.py  lstm_regressor.py  mlp_regressor.py  xgboost_regressor.py
src/doa_zero_eeg/preprocessing/: multiple_sessions.py
src/doa_zero_eeg/utils/: utils.py
src/doa_zero_eeg/viz/: bis_and_signals.py  plot_utils.py
src/test/: test_boilerplate.py
