[project]
name = "doa-zero-eeg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Valentin Iovene", email = "val@too.gy" }
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.4",
    "seaborn>=0.13.2",
    "ipdb>=0.13.13",
    "jupyterlab>=4.1.0",
    "ipython>=8.12.3",
    "pre-commit>=3.5.0",
    "ruff>=0.2.1",
    "skorch>=0.15.0",
    "scipy>=1.10.1",
    "loguru>=0.7.2",
    "pytest>=8.0.0",
    "typeguard>=4.1.5",
    "pandas-stubs>=2.0.3.230814",
    "types-six>=1.16.21.20240106",
    "pyarrow>=15.0.0",
    "click>=8.1.7",
    "cython>=3.0.8",
    "rich>=13.7.0",
    "torch>=2.2.0",
    "dwclib>=2023.10.15",
    "xgboost>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "doa_zero_eeg:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/doa_zero_eeg"]

[tool.pyright]
include = ["src"]
exclude = ["scripts", "notebooks", "examples"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "scripts",
    "notebooks",
]
per-file-ignores = {}
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D1"]
